# Formula-Student-Driverless-Simulator-ojas-racing

./: .gitignore  CHANGELOG.md  README.md
dashboard/: PIPELINE.md
fs_vehicle/: CMakeLists.txt  README.md  package.xml
fs_vehicle/config/: fs_car.rviz  ros_gz_bridge.yaml  ros_gz_bridge_sensors.yaml
fs_vehicle/launch/: ps_teleop.launch.py  spawn_vehicle.launch.py
fs_vehicle/scripts/: imu_tui  ps_teleop
fs_vehicle/urdf/: chassis.urdf.xacro  front_wing.urdf.xacro  fs_car.urdf.xacro  sensors.urdf.xacro  wheels.urdf.xacro
fs_vehicle/worlds/: empty_track.sdf
fs_vehicle_plugins/: CMakeLists.txt  README.md  package.xml
fs_vehicle_plugins/include/fs_vehicle_plugins/: fs_ackermann_drive.hpp
fs_vehicle_plugins/src/: fs_ackermann_drive.cpp
simulator/: README.md  package.xml  setup.py
simulator/fs_bringup/launch/: sim.launch.py  view_generated_track.launch.py
simulator/fs_track_generator/: __init__.py  artifacts.py  cli.py  layout.py  models.py  pipeline.py  ros_bridge.py  validation.py  world.py
simulator/fs_tui/: __init__.py  panel.py  sim_process.py
simulator/test/: test_track_generator.py
