<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fs_vehicle</name>
  <version>0.1.0</version>
  <description>Formula Student vehicle description — Gazebo Harmonic / ROS2 Jazzy</description>
  <maintainer email="rohithm8988@gmail.com">rohith</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
