<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fs_vehicle_plugins</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic (gz-sim8) plugins for the Formula Student simulator</description>
  <maintainer email="rohithm8988@gmail.com">rohith</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- gz vendor packages (bring in headers + cmake targets) -->
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_common_vendor</depend>
  <depend>gz_utils_vendor</depend>
  <depend>sdformat_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
