<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>Formula Student track generation, launch helpers, and simulator tooling</description>
  <maintainer email="rohithm8988@gmail.com">rohith</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>fs_vehicle</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
